# InternetRecognitionCommandLine

./: IntentRecognition.cpp  README.md
IntentRecognition/: CMakeLists.txt
IntentRecognition/IntentRecognition/: CMakeLists.txt  IntentRecognition.cpp  IntentRecognition.h  main.cpp
IntentRecognition/tests/: CMakeLists.txt  test.cpp
